Update to exploratory

--- a/exploratory1.Rmd
+++ b/exploratory1.Rmd
@@ -233,7 +233,7 @@ tidy(summary(regression2))
 
 ####24-Hour Activity Profiles
 
-Lastly, I create 24-hour activity profiles for each day of the week aggregating data from all 47 weeks. We see higher peaks for Thursday, Friday, and Sunday toward the evenings, which again supports our theory that the patient tends to be more overall active during the later days of the week.
+Lastly, I create 24-hour activity profiles for each day of the week aggregating data from all 47 weeks. We see bimodal distributions for most of the days, suggesting that the patient was more active during the mornings and in the evenings. Secondly, we see higher peaks for Thursday, Friday, and Sunday, indicating heavier activity levels during this time. As noted above though, day of the week was not statistically associated with difference in activity levels, after adjusting for time. 
 ```{r 24_hour_profiles, out.width = 985}
 minute_act = 
   activity %>% 
