--- a/index.Rmd
+++ b/index.Rmd
@@ -33,17 +33,15 @@ font-weight: bold;
 
 <br>
 
-##Jacky Choi, MPHc
+##Jacky Choi
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 <link rel="stylesheet" href="academicons/css/academicons.min.css"/>
-<link rel="apple-touch-icon" href="/images/jacky.jpg" >
 
 MPH Graduate Student <br>
 [Department of Epidemiology](https://www.mailman.columbia.edu/become-student/departments/epidemiology) <br>
+Applied Biostatistics Certificate <br>
 Columbia University Mailman School of Public Health
-
-<br><img src="images/jacky.jpg" alt="jacky" style="width:35%; border:10px solid">
 
 <br>
 
@@ -51,7 +49,7 @@ Columbia University Mailman School of Public Health
 
 I am currently a second-year graduate student in the Department of Epidemiology at the Mailman School of Public Health at Columbia University pursuing an Applied Biostatistics certificate. My academic coursework has been geared heavily toward foundational biostatistical skills using various statistical programs and languages, while my experience has involved working with various aspects of data (including data acquisition, cleaning, management, analysis, and reporting) in relation to health research. Taken together, I believe I am a formidable candidate for data scientist, analyst, and biostatistician positions. I am currently seeking these positions, or any that sufficiently develops my analytic mindset, programming/coding capability, biostatistical skills, and/or knowledge of research methods.
 
-To view my resume, you can click [here](images/Resume.pdf).
+To view my resume, you can click [here](images/resume_nosite.pdf).
 
 <br>
 
