--- a/index.Rmd
+++ b/index.Rmd
@@ -31,6 +31,16 @@ font-weight: bold;
 
 </style>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-137778138-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-137778138-1');
+</script>
+
 <br>
 
 ##Jacky Choi
