Github issue try 2

--- a/NHANES1.Rmd
+++ b/NHANES1.Rmd
@@ -46,6 +46,7 @@ font-weight: bold;
 ###Skills
 * Data Cleaning
 * Data Analysis
+* Statistical Analysis
 * Logistic Regression
 * Research Report Writing
 * SAS
